<?php

namespace App;

class Location
{
    private int $nbJours;
    private array $vehicule=[];
    public function __construct(int $nbJours){
        $this->nbJours = $nbJours;
    }
    public function louerVehicule():void{
        $location=
    }
}